--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -1,1 +1,10 @@
 
+### data structure
+
+1. how to calculate the flow of funds amount between branch X and Y:
+  | bill type    | specifics             | amounts | calculations                        |
+|--------------|-----------------------|---------|-------------------------------------|
+| bills sold   | bills of exchange     |       a | (c + d) - (a+ b)                    |
+|              | telegraphic transfers |       b | amount of interest bills (d)        |
+| bills bought | bills of exchange     |       c | ((c + d) - (a+ b)) + d              |
+|              | telegraphic transfers |       d | conversions into Japanese yen (JPY) |
