--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -9,3 +9,6 @@
 |              | telegraphic transfers |       b | amount of interest bills (d)        |
 | bills bought | bills of exchange     |       c | ((c + d) - (a+ b)) + d              |
 |              | telegraphic transfers |       d | conversions into Japanese yen (JPY) |
+
+
+* ### conversions into Japanese yen
