Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -3,12 +3,11 @@
 
 1. how to calculate the flow of funds amount between branch X and Y:
 
-| bill type    | specifics             | amounts | calculations                        |
-|--------------|-----------------------|---------|-------------------------------------|
-| bills sold   | bills of exchange     |       a | (c + d) - (a+ b)                    |
-|              | telegraphic transfers |       b | amount of interest bills (d)        |
-| bills bought | bills of exchange     |       c | ((c + d) - (a+ b)) + d              |
-|              | telegraphic transfers |       d | conversions into Japanese yen (JPY) |
-
+| bill type    | specifics             | amounts | calculations                                                    |
+|--------------|-----------------------|---------|-----------------------------------------------------------------|
+| bills sold   | bills of exchange     |       a | (c + d) - (a+ b)                                                |
+|              | telegraphic transfers |       b | amount of interest bills (d)                                    |
+| bills bought | bills of exchange     |       c | ((c + d) - (a+ b)) + d                                          |
+|              | telegraphic transfers |       d | conversions of (((c + d) - (a+ b)) + d) into Japanese yen (JPY) |
 
 * ### conversions into Japanese yen
