--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -1,7 +1,7 @@
 
 * ### data structure
 
-1. how to calculate the flow of funds amount between branch X and Y:
+1. how to calculate the flow of funds amount from (generic) branch X to (generic) branch Y:
 
 | bill type    | specifics             | amounts | calculations                                                    |
 |--------------|-----------------------|---------|-----------------------------------------------------------------|
@@ -9,5 +9,9 @@
 |              | telegraphic transfers |       b | amount of interest bills (d)                                    |
 | bills bought | bills of exchange     |       c | ((c + d) - (a+ b)) + d                                          |
 |              | telegraphic transfers |       d | conversions of (((c + d) - (a+ b)) + d) into Japanese yen (JPY) |
+
+Notes:
+> * the above formula `(c + d) - (a+ b)` is the standard formula for calculating the flow-of-funds from one branch to another
+> * the `amount of interest bills (d)` is optional; typically, interest bills were only sent from liquid centers to liquidity-poor peripheral markets, and this because of their role as finance  bills rather than as bills which contained an underlying trade ('real') transaction 
 
 * ### conversions into Japanese yen
