Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -5,13 +5,16 @@
 
 | bill type    | specifics             | amounts | calculations                                                    |
 |--------------|-----------------------|---------|-----------------------------------------------------------------|
-| bills sold   | bills of exchange     |       a | (c + d) - (a+ b)                                                |
+| bills sold   | bills of exchange     |       a | (c + d) - (a + b)                                               |
 |              | telegraphic transfers |       b | amount of interest bills (d)                                    |
 | bills bought | bills of exchange     |       c | ((c + d) - (a+ b)) + d                                          |
 |              | telegraphic transfers |       d | conversions of (((c + d) - (a+ b)) + d) into Japanese yen (JPY) |
 
 Notes:
-> * the above formula `(c + d) - (a+ b)` is the standard formula for calculating the flow-of-funds from one branch to another
-> * the `amount of interest bills (d)` is optional; typically, interest bills were only sent from liquid centers to liquidity-poor peripheral markets, and this because of their role as finance  bills rather than as bills which contained an underlying trade ('real') transaction 
+> * the above formula `(c + d) - (a + b)` is the standard formula for calculating the flow-of-funds from one branch to another.
+> * the `amount of interest bills (d)` is optional; typically, interest bills were only sent from liquid centers to liquidity-poor peripheral markets, and this because of their role as finance  bills rather than as bills that contained an underlying trade ('real') transaction.
+> * `((c + d) - (a+ b)) + d` speaks for itself: it is the extended version of the above noted formula `(c + d) - (a + b)`, in that it adds interest bills as contracts signifying yet another *positive* flow of funds from branch X to branch Y.
+> * the value for the formula `conversions of (((c + d) - (a+ b)) + d) into Japanese yen (JPY)` is important, as it will be used and compared with the value of funds sent from branch Y to branch X; the difference between the two determines the relative exchange position of the branches *vis-a-vis* each other.
+
 
 * ### conversions into Japanese yen
