Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -8,7 +8,7 @@
 | bills sold   | bills of exchange     |       a | (c + d) - (a + b)                                               |
 |              | telegraphic transfers |       b | amount of interest bills (d)                                    |
 | bills bought | bills of exchange     |       c | ((c + d) - (a + b)) + d                                         |
-|              | telegraphic transfers |       d | conversions of (((c + d) - (a+ b)) + d) into Japanese yen (JPY) |
+|              | telegraphic transfers |       d | conversions of (((c + d) - (a + b)) + d) into Japanese yen (JPY)|
 
 
 Notes:
@@ -19,3 +19,6 @@ Notes:
 
 
 * ### conversions into Japanese yen
+
+> * Exchange rates were taken from the  ¨Historical statistics - Exchange rates" page of the Bank of Japan, http://www.imes.boj.or.jp/hstat/data/ferdd/index.html; this page contains both a data source (in .CSV), and an [explanatory note](http://www.imes.boj.or.jp/hstat/data/ferdd/note_ferdd.html); see [here for English](http://www.imes.boj.or.jp/english/hstat/data/ferdd/note_ferdd.html)
+> * I have used the monthly average value as base for calculations
