Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -1,5 +1,5 @@
 
-* ### data structure
+### data structure
 
 1. how to calculate the flow of funds amount from (generic) branch X to (generic) branch Y:
 
@@ -11,14 +11,17 @@
 |              | telegraphic transfers |       d | conversions of (((c + d) - (a + b)) + d) into Japanese yen (JPY)|
 
 
-Notes:
+## Notes:
 > * the above formula `(c + d) - (a + b)` is the standard formula for calculating the flow-of-funds from one branch to another.
 > * the `amount of interest bills (d)` is optional; typically, interest bills were only sent from liquid centers to liquidity-poor peripheral markets, and this because of their role as finance  bills rather than as bills that contained an underlying trade ('real') transaction.
 > * `((c + d) - (a + b)) + d` speaks for itself: it is the extended version of the above noted formula `(c + d) - (a + b)`, in that it adds interest bills as contracts signifying yet another *positive* flow of funds from branch X to branch Y.
 > * the value for the formula `conversions of (((c + d) - (a+ b)) + d) into Japanese yen (JPY)` is important, as it will be used and compared with the value of funds sent from branch Y to branch X; the difference between the two determines the relative exchange position of the branches *vis-a-vis* each other.
 
+### Ethnographic relevance
 
-* ### conversions into Japanese yen
+
+
+### conversions into Japanese yen
 
 > * Exchange rates were taken from the  ¨Historical statistics - Exchange rates" page of the Bank of Japan, http://www.imes.boj.or.jp/hstat/data/ferdd/index.html; this page contains both a data source (in .CSV), and an [explanatory note](http://www.imes.boj.or.jp/hstat/data/ferdd/note_ferdd.html); see [here for English](http://www.imes.boj.or.jp/english/hstat/data/ferdd/note_ferdd.html)
 > * I have used the monthly average value as base for calculations
