Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -1,5 +1,5 @@
 
-### data structure
+### Data structure
 
 1. how to calculate the flow of funds amount from (generic) branch X to (generic) branch Y:
 
@@ -11,7 +11,7 @@
 |              | telegraphic transfers |       d | conversions of (((c + d) - (a + b)) + d) into Japanese yen (JPY)|
 
 
-## Notes:
+#### Notes:
 > * the above formula `(c + d) - (a + b)` is the standard formula for calculating the flow-of-funds from one branch to another.
 > * the `amount of interest bills (d)` is optional; typically, interest bills were only sent from liquid centers to liquidity-poor peripheral markets, and this because of their role as finance  bills rather than as bills that contained an underlying trade ('real') transaction.
 > * `((c + d) - (a + b)) + d` speaks for itself: it is the extended version of the above noted formula `(c + d) - (a + b)`, in that it adds interest bills as contracts signifying yet another *positive* flow of funds from branch X to branch Y.
