Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -19,9 +19,10 @@
 
 ### Ethnographic relevance
 
+> * when plotting, in a time series, the differential between a) funds sent from X to Y and b) funds sent from Y to X, we inadvertently yet consciously point out the *necessary* existence of a 'negative' exchange position of one branch versus the other (either X or Y) and, by extension, a negative exchange position vis-a-vis the branch network. 
 
 
 ### conversions into Japanese yen
 
 > * Exchange rates were taken from the  ¨Historical statistics - Exchange rates" page of the Bank of Japan, http://www.imes.boj.or.jp/hstat/data/ferdd/index.html; this page contains both a data source (in .CSV), and an [explanatory note](http://www.imes.boj.or.jp/hstat/data/ferdd/note_ferdd.html); see [here for English](http://www.imes.boj.or.jp/english/hstat/data/ferdd/note_ferdd.html)
-> * I have used the monthly average value as base for calculations
+> * I have used the monthly average value as base for calculations (unfortunately, end-of-month rates are not included in the database)
