Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -13,13 +13,13 @@
 
 #### Notes:
 > * the above formula `(c + d) - (a + b)` is the standard formula for calculating the flow-of-funds from one branch to another.
-> * the `amount of interest bills (d)` is optional; typically, interest bills were only sent from liquid centers to liquidity-poor peripheral markets, and this because of their role as finance  bills rather than as bills that contained an underlying trade ('real') transaction.
+> * the `amount of interest bills (d)` is optional; typically, interest bills were only sent from liquid centers to liquidity-poor peripheral markets, and this because of their role as finance  bills rather than as bills that contained an underlying trade ('real') transaction. One typically finds them as sent from London or New York to Yokohama, Kobe (to a lesser degree), and Shanghai.
 > * `((c + d) - (a + b)) + d` speaks for itself: it is the extended version of the above noted formula `(c + d) - (a + b)`, in that it adds interest bills as contracts signifying yet another *positive* flow of funds from branch X to branch Y.
 > * the value for the formula `conversions of (((c + d) - (a+ b)) + d) into Japanese yen (JPY)` is important, as it will be used and compared with the value of funds sent from branch Y to branch X; the difference between the two determines the relative exchange position of the branches *vis-a-vis* each other.
 
 ### Ethnographic relevance
 
-> * when plotting, in a time series, the differential between a) funds sent from X to Y and b) funds sent from Y to X, we inadvertently yet consciously point out the *necessary* existence of a 'negative' exchange position of one branch versus the other (either X or Y) and, by extension, a negative exchange position vis-a-vis the branch network. 
+> * when plotting, in a time series, the differential between a) funds sent from X to Y and b) funds sent from Y to X, we inadvertently *yet consciously* point out the *necessary* existence of a 'negative' exchange position of one branch versus the other (either X or Y) and, by extension, the pissibility of a negative exchange position of one branch *vis-a-vis* the aggregated branch network. This may seem obvious and, indeed, *it is*: bankers at the time complained relentlessly about certain branches that they considered to be chronic 'withdrawers' of funds. In the vocabulary and thinking of social network analysis (SNA), however, it is not that simple. As the theory stands now, SNA does not easily accept the possibility of 'negative flows' (as, for instance, in the case of a banking customer using an overdraft facility with his local bank). In the book manuscript, I thought it to be important to be true to the contemporary problem awareness, and have attempted to allow the possibility of negative flows in the analysis and visualizations.
 
 
 ### conversions into Japanese yen
