Update 3. software packages and algorithms employed.md

--- a/3. software packages and algorithms employed.md
+++ b/3. software packages and algorithms employed.md
@@ -1,4 +1,4 @@
 ### UCiNet
 
 * source: Borgatti, S.P., Everett, M.G. and Freeman, L.C. 2002. Ucinet for Windows: Software for Social Network Analysis. Harvard, MA: Analytic Technologies. https://sites.google.com/site/ucinetsoftware/home
-* our discussion relies on **force-directed drawing (FDD) algorithms**, concretely the graph layout algorithms (GLA) that are built into the UCINET software package. FDD algorithms proceed in a way that is rather different from MDS (multi-dimensional scaling). They do not attempt to map a network’s structure (i.e. its relations of similarities respectively dissimilarities) in terms of the raw distances of the proximity matrix, yet conceive of it in terms of energy. Core to minimizing energy is strain. Typically, FDD algorithms are therefore referred to as ‘spring embedders’. As the name suggests, they act as a system of springs, stretched between posts in a force field. If two posts with a spring between them is placed too close to each other, the spring is compressed and tries to push the posts apart (a property we also refer to as ‘node repulsion’). If, on the other hand, the posts are too far apart, the spring is stretched and tries to pull the posts together (a property called ‘node attraction’). In essence, the algorithms are methods of locating the posts in such a way as to bring the repulsive and attractive forces throughout the entire field in a stable, balanced state.
+* our discussion relies on **force-directed drawing (FDD) algorithms**, concretely the graph layout algorithms (GLA) that are built into the UCINET software package. FDD algorithms proceed in a way that is rather different from MDS (multi-dimensional scaling). They do not attempt to map a network’s structure (i.e. its relations of similarities respectively dissimilarities) in terms of the raw distances of the proximity matrix, yet conceive of it in terms of energy. Core to minimizing energy is strain. Typically, FDD algorithms are therefore referred to as ‘spring embedders’. As the name suggests, they act as a system of springs, stretched between posts in a force field. If two posts with a spring between them are placed too close to each other, the spring is compressed and tries to push the posts apart (a property we also refer to as ‘node repulsion’). If, on the other hand, the posts are too far apart, the spring is stretched and tries to pull the posts together (a property called ‘node attraction’). In essence, the algorithms are methods of locating the posts in such a way as to bring the repulsive and attractive forces throughout the entire field in a stable, balanced state.
