Update 2. data inclusion and exclusion.md

--- a/2. data inclusion and exclusion.md
+++ b/2. data inclusion and exclusion.md
@@ -2,5 +2,5 @@
 ### Flow-of-fund analysis of an exchange bank branch network
 
 > * A reconstruction of YSB’s flow-of-funds has been attempted by many others, with varying degrees of success. As indicated in the chapter "Making of the Database", Taira’s groundbreaking study is the first to bring a network theoretical understanding to YSB, but it unfortunately eliminated the data related to the interest bills (not included in the flow data for accounting reasons). Because the amount of interest bills is substantial, his analysis is not only mistaken with respect to the weight of transfers, but also with respect to their direction.
-        * Sources: 平智之. 1984. 「第1次大戦前の国際金本位制下における横浜正金銀行–日銀の兌換制維持政策との関連において-上-.」 『金融経済』, no. 208 (October): p41–81. http://ci.nii.ac.jp/naid/40000792001; 平智之. 1984. 「第1次大戦前の国際金本位制下における横浜正金銀行–日銀の兌換制維持政策との関連において-下-.」 『金融経済』, no. 209 (December): p1–27. http://ci.nii.ac.jp/naid/40000792007.
+       > * Sources: 平智之. 1984. 「第1次大戦前の国際金本位制下における横浜正金銀行–日銀の兌換制維持政策との関連において-上-.」 『金融経済』, no. 208 (October): p41–81. http://ci.nii.ac.jp/naid/40000792001; 平智之. 1984. 「第1次大戦前の国際金本位制下における横浜正金銀行–日銀の兌換制維持政策との関連において-下-.」 『金融経済』, no. 209 (December): p1–27. http://ci.nii.ac.jp/naid/40000792007.
 > * 
