--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -21,8 +21,11 @@
 
 > * when plotting, in a time series, the differential between a) funds sent from X to Y and b) funds sent from Y to X, we inadvertently *yet consciously* point out the *necessary* existence of a 'negative' exchange position of one branch versus the other (either X or Y) and, by extension, the possibility of a negative exchange position of one branch *vis-a-vis* the aggregated branch network. This may seem obvious and, indeed, *it is*: bankers at the time complained relentlessly about certain branches that they considered to be chronic 'withdrawers' of funds. In the vocabulary and thinking of social network analysis (SNA), however, it is not that simple. As the theory stands now, SNA does not easily accept the possibility of 'negative flows' (as, for instance, in the case of a banking customer using an overdraft facility with his local bank). In the book manuscript, I thought it to be important to be true to the contemporary problem awareness, and have attempted to allow the possibility of negative flows in the analysis and visualizations.
 
+### Rounding
+
+> * importantly, amounts were rounded *to the ones*. This is quite different from earlier analyses, which chose to round to the thousands. In itself, however, it was the only way to come to conclusive findings with respect to the question whether hedging strategies were effectively adopted or not.
 
 ### conversions into Japanese yen
 
-> * Exchange rates were taken from the  ¨Historical statistics - Exchange rates" page of the Bank of Japan, http://www.imes.boj.or.jp/hstat/data/ferdd/index.html; this page contains both a data source (in .CSV), and an [explanatory note](http://www.imes.boj.or.jp/hstat/data/ferdd/note_ferdd.html); see [here for English](http://www.imes.boj.or.jp/english/hstat/data/ferdd/note_ferdd.html)
-> * I have used the monthly average value as base for calculations (unfortunately, end-of-month rates are not included in the database)
+> * Exchange rates were taken from the  "Historical statistics - Exchange rates" page of the Bank of Japan, http://www.imes.boj.or.jp/hstat/data/ferdd/index.html; this page contains both a data source (in .CSV), and an [explanatory note](http://www.imes.boj.or.jp/hstat/data/ferdd/note_ferdd.html); see [here for English](http://www.imes.boj.or.jp/english/hstat/data/ferdd/note_ferdd.html)
+> * I have used the monthly average value as base for calculations (unfortunately, end-of-month rates are not included in the BOJ database)
