--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -13,7 +13,7 @@
 
 #### Notes:
 > * the above formula `(c + d) - (a + b)` is the standard formula for calculating the flow-of-funds from one branch to another.
-> * the `amount of interest bills (d)` is optional; typically, interest bills were only sent from liquid centers to liquidity-poor peripheral markets, and this because of their role as finance  bills rather than as bills that contained an underlying trade ('real') transaction. One typically finds them as sent from London or New York to Yokohama, Kobe (to a lesser degree), and Shanghai.
+> * the `amount of interest bills (d)` is optional, i.e. is typically zero for flows among most branches, and this for a good reason: typically, interest bills were only sent from liquid centers to liquidity-poor peripheral markets, and this because of their role as finance  bills rather than as bills that contained an underlying trade ('real') transaction. One typically finds them as sent from London or New York to Yokohama, Kobe (to a lesser degree), and Shanghai.
 > * `((c + d) - (a + b)) + d` speaks for itself: it is the extended version of the above noted formula `(c + d) - (a + b)`, in that it adds interest bills as contracts signifying yet another *positive* flow of funds from branch X to branch Y.
 > * the value for the formula `conversions of (((c + d) - (a+ b)) + d) into Japanese yen (JPY)` is important, as it will be used and compared with the value of funds sent from branch Y to branch X; the difference between the two determines the relative exchange position of the branches *vis-a-vis* each other.
 
@@ -25,7 +25,7 @@
 
 > * importantly, amounts were rounded *to the ones*. This is quite different from earlier analyses, which chose to round to the thousands. In itself, however, it was the only way to come to conclusive findings with respect to the question whether hedging strategies were effectively adopted or not.
 
-### conversions into Japanese yen
+### Conversions into Japanese yen
 
 > * Exchange rates were taken from the  "Historical statistics - Exchange rates" page of the Bank of Japan, http://www.imes.boj.or.jp/hstat/data/ferdd/index.html; this page contains both a data source (in .CSV), and an [explanatory note](http://www.imes.boj.or.jp/hstat/data/ferdd/note_ferdd.html); see [here for English](http://www.imes.boj.or.jp/english/hstat/data/ferdd/note_ferdd.html)
 > * I have used the monthly average value as base for calculations (unfortunately, end-of-month rates are not included in the BOJ database)
