Update 2. data inclusion and exclusion.md

--- a/2. data inclusion and exclusion.md
+++ b/2. data inclusion and exclusion.md
@@ -10,3 +10,5 @@
 ![YSB on an even keel](/img_YSB_even_keel.png)
 
 Source: own dataset and visualization; see: https://plot.ly/~michaelschiltz/50/ysb-on-an-even-keel-1893-1908/
+
+### Balance sheet data
