--- a/2. data inclusion and exclusion.md
+++ b/2. data inclusion and exclusion.md
@@ -12,3 +12,15 @@
 Source: own dataset and visualization; see: https://plot.ly/~michaelschiltz/50/ysb-on-an-even-keel-1893-1908/
 
 ### Balance sheet data
+
+> * in the Midterm reports of the Yokohama Specie Bank, balance sheet data are generally included as follows:
+
+| [name]   |          |          | 店名 branch name                            |
+|----------|----------|----------|---------------------------------------------|
+| z        | y        | x        | 種類 type of entry                          |
+| [amount] | [amount] | [amount] | 前期繰越高 carried over from last semester  |
+| [amount] | [amount] | [amount] | 当期 [...]高 [acquired] this semester       |
+| [amount] | [amount] | [amount] | 当期 [...]高 [paid out] this semester       |
+| [amount] | [amount] | [amount] | 差引き現在高 amount on hand; current amount |
+
+>> * remarks: 
