--- a/2. data inclusion and exclusion.md
+++ b/2. data inclusion and exclusion.md
@@ -26,3 +26,11 @@ Source: own dataset and visualization; see: https://plot.ly/~michaelschiltz/50/y
 >> * remarks: as is the convention in prewar Japanese, the table is to be read from right to left.
 
 > * as a rule, our database only notes the mounts of the last category, i.e. 「差引き現在高」, or `amounts on hand`.
+
+| :[name]                      :| 店名 branch name                            |
+|----------|----------|----------|---------------------------------------------|
+| z        | y        | x        | 種類 type of entry                          |
+| [amount] | [amount] | [amount] | 前期繰越高 carried over from last semester  |
+| [amount] | [amount] | [amount] | 当期 [...]高 [acquired] this semester       |
+| [amount] | [amount] | [amount] | 当期 [...]高 [paid out] this semester       |
+| [amount] | [amount] | [amount] | 差引き現在高 amount on hand; current amount |
