Update 2. data inclusion and exclusion.md

--- a/2. data inclusion and exclusion.md
+++ b/2. data inclusion and exclusion.md
@@ -15,7 +15,7 @@ Source: own dataset and visualization; see: https://plot.ly/~michaelschiltz/50/y
 
 > * in the Midterm reports of the Yokohama Specie Bank, balance sheet data are generally included as follows:
 
->| [name]   |          |          | 店名 branch name                            |
+>| <td colspan=3>[name]<td>         | 店名 branch name                            |
 >|----------|----------|----------|---------------------------------------------|
 >| z        | y        | x        | 種類 type of entry                          |
 >| [amount] | [amount] | [amount] | 前期繰越高 carried over from last semester  |
