--- a/2. data inclusion and exclusion.md
+++ b/2. data inclusion and exclusion.md
@@ -26,3 +26,47 @@ Source: own dataset and visualization; see: https://plot.ly/~michaelschiltz/50/y
 >> * remarks: as is the convention in prewar Japanese, the table is to be read **from right to left**.
 
 > * as a rule, our database only notes the mounts of the last category, i.e. 「差引き現在高」, or `amounts on hand`.
+
+<style type="text/css">
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;}
+.tg .tg-baqh{text-align:center;vertical-align:top}
+.tg .tg-yw4l{vertical-align:top}
+</style>
+<table class="tg">
+  <tr>
+    <th class="tg-031e">[name]</th>
+    <th class="tg-031e"></th>
+    <th class="tg-031e"></th>
+    <th class="tg-031e">店名 branch name</th>
+  </tr>
+  <tr>
+    <td class="tg-baqh" colspan="3">z</td>
+    <td class="tg-yw4l">種類 type of entry</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">[amount]</td>
+    <td class="tg-yw4l">[amount]</td>
+    <td class="tg-yw4l">[amount]</td>
+    <td class="tg-yw4l">前期繰越高 carried over from last semester</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">[amount]</td>
+    <td class="tg-yw4l">[amount]</td>
+    <td class="tg-yw4l">[amount]</td>
+    <td class="tg-yw4l">当期 [...]高 [acquired] this semester</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">[amount]</td>
+    <td class="tg-yw4l">[amount]</td>
+    <td class="tg-yw4l">[amount]</td>
+    <td class="tg-yw4l">当期 [...]高 [paid out] this semester</td>
+  </tr>
+  <tr>
+    <td class="tg-yw4l">[amount]</td>
+    <td class="tg-yw4l">[amount]</td>
+    <td class="tg-yw4l">[amount]</td>
+    <td class="tg-yw4l">差引き現在高 amount on hand; current amount</td>
+  </tr>
+</table>
