Update 2. data inclusion and exclusion.md

--- a/2. data inclusion and exclusion.md
+++ b/2. data inclusion and exclusion.md
@@ -25,4 +25,4 @@ Source: own dataset and visualization; see: https://plot.ly/~michaelschiltz/50/y
 
 >> * remarks: as is the convention in prewar Japanese, the table is to be read **from right to left**.
 
-> * as a rule, our database only notes the mounts of the last category, i.e. 「差引き現在高」, or `amounts on hand`.
+> * as a rule, our database only notes the mounts of the last category, i.e. 「差引き現在高」, or `amounts on hand` for the semester in question. As the reader will understand, it expresses (`carried over from last semester` + `[acquired] this semester` - `[paid out] this semester`).
