Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -1,3 +1,4 @@
+## A. Flow-of-funds Analysis
 
 ### Data structure
 
@@ -29,3 +30,7 @@
 
 > * Exchange rates were taken from the  "Historical statistics - Exchange rates" page of the Bank of Japan, http://www.imes.boj.or.jp/hstat/data/ferdd/index.html; this page contains both a data source (in .CSV), and an [explanatory note](http://www.imes.boj.or.jp/hstat/data/ferdd/note_ferdd.html); see [here for English](http://www.imes.boj.or.jp/english/hstat/data/ferdd/note_ferdd.html)
 > * I have used the monthly average value as base for calculations (unfortunately, end-of-month rates are not included in the BOJ database)
+
+## B. Interest Bills
+
+## C. Other Balance Sheet Data
