--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -23,6 +23,7 @@
 > * when plotting, in a time series, the differential between a) funds sent from X to Y and b) funds sent from Y to X, we inadvertently *yet consciously* point out the *necessary* existence of a 'negative' exchange position of one branch versus the other (either X or Y) and, by extension, the possibility of a negative exchange position of one branch *vis-a-vis* the aggregated branch network. This may seem obvious and, indeed, *it is*: bankers at the time complained relentlessly about certain branches that they considered to be chronic 'withdrawers' of funds. In the vocabulary and thinking of social network analysis (SNA), however, it is not that simple. As the theory stands now, SNA does not easily accept the possibility of 'negative flows' (as, for instance, in the case of a banking customer using an overdraft facility with his local bank). In the book manuscript, I thought it to be important to be true to the contemporary problem awareness, and have attempted to allow the possibility of negative flows in the analysis and visualizations.
 
 ![YSB branches exchange position - a time series](/YSB_centrality1.png)
+Source: [personal calculations](https://plot.ly/~michaelschiltz/13#plot)
 
 ### Rounding
 
