--- a/2. data inclusion and exclusion.md
+++ b/2. data inclusion and exclusion.md
@@ -7,7 +7,7 @@
 >> * *Sources*:  Ishii Kanji 石井寛治. 1999. *Kindai nihon kin’yū-shi josetsu* 『近代日本金融史序説』. 東京大学出版会. P. 250-251; Ishii Kanji. 1994. “Japanese Foreign Trade and the Yokohama Specie Bank, 1880-1913”, in Olive Checkland, Shizuya Nishimura, and Norio Tamaki (eds.), *Pacific Banking, 1859-1959: East Meets West*. New York: St. Martin’s Press. Pp. 22-23; Bak Jun Geon 朴埈健. 1992. 「産業資本成立期における横浜正金銀行の資金循環構造–利付為替手形の処理問題を中心として.」 『経済論究』, March, p. 147–162. .http://ci.nii.ac.jp/naid/40000909339. For primary evidence on the nature of interest bills handled by YSB’s New York office, see: 横濱正金銀行總務部行報係. 1911. 『行報』. 横濱正金銀行總務部行報係. February 16. http://ci.nii.ac.jp/ncid/AA12169139.
 > * **Important: Note that Ishii's intuitions have been confirmed by our dataset and visualizations**: it is only because we take into account the amounts of interest bills that our analysis arrives at the conclusion that an 'even keel' strategy existed. If the data on interest bills would have been omitted, symmetries in amounts of bills bought and sold handled by the silver respectively gold branches would not have appeared. 
 
-![YSB on an even keel](/img_YSB_even_keel.png)
+![YSB on an even keel](/YSB_on_an_even_keel_1893-1908_definitive.png)
 
 Source: own dataset and visualization; see: https://plot.ly/~michaelschiltz/50/ysb-on-an-even-keel-1893-1908/
 
