Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -24,7 +24,7 @@
 
 ![YSB branches exchange position - a time series](/YSB_centrality1.png)
 
-Source: [personal calculations](https://plot.ly/~michaelschiltz/13#plot)
+Source: [own data and analysis](https://plot.ly/~michaelschiltz/13#plot)
 
 *Legend*: Y: Yokohama Head Office; K: Kobe; L: London; NY: New York LY: Lyon; SF: San Francisco; HW: Hawai; S: Shanghai; H: Hankow; B: Mumbai (Bombay); HK: Hong Kong; T: Tokyo; N: Nagasaki; TJ: Tianjin; NZ: Niuzhang; P: Beijing (Peking); D: Dairen; LI: Liaoyang; M: Mukden; LS: Lushun; A: Andong; Z: Yantai (Chefoo); O: Osaka; TL: Tieling; C: Changchun; CBI: correspondent banks (international); CBD: correspondent banks (domestic). 
 
