Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -11,12 +11,30 @@
 | bills bought | bills of exchange     |       c | ((c + d) - (a + b)) + d                                         |
 |              | telegraphic transfers |       d | conversions of (((c + d) - (a + b)) + d) into Japanese yen (JPY)|
 
-
 #### Notes:
 > * the above formula `(c + d) - (a + b)` is the standard formula for calculating the flow-of-funds from one branch to another.
 > * the `amount of interest bills (d)` is optional, i.e. is typically zero for flows among most branches, and this for a good reason: typically, interest bills were only sent from liquid centers to liquidity-poor peripheral markets, and this (mostly, but not exclusively) because of their role as finance  bills rather than as bills that contained an underlying trade ('real') transaction. One typically finds them as sent from London or New York to Yokohama, Kobe (to a lesser degree), and Shanghai.
 > * `((c + d) - (a + b)) + d` speaks for itself: it is the extended version of the above noted formula `(c + d) - (a + b)`, in that it adds interest bills as contracts signifying yet another *positive* flow of funds from branch X to branch Y.
 > * the value for the formula `conversions of (((c + d) - (a+ b)) + d) into Japanese yen (JPY)` is important, as it will be used and compared with the value of funds sent from branch Y to branch X; the difference between the two determines the relative exchange position of the branches *vis-a-vis* each other.
+
+2. Consequently, a adjacency matrix for a a generic branch network with branches X,Y,Z at a point in time t1 looks as follows:
+
+|   | X  |     |       |   | Y  |     |        |   | Z  |     |      |   |
+|---|----|-----|-------|---|----|-----|--------|---|----|-----|------|---|
+| **X** | BS | b/e |       |   | BS | b/e | a      |   | BS | b/e | a’   |   |
+|   |    | TT  |       |   |    | TT  | b      |   |    | TT  | b’   |   |
+|   | BB | b/e |       |   | BB | b/e | c      |   | BB | b/e | c’   |   |
+|   |    | TT  |       |   |    | TT  | d      |   |    | TT  | d’   |   |
+| **Y** | BS | b/e | a’’   |   | BS | b/e |        |   | BS | b/e | a’’’ |   |
+|   |    | TT  | b’’   |   |    | TT  |        |   |    | TT  | b’’’ |   |
+|   | BB | b/e | c’’   |   | BB | b/e |        |   | BB | b/e | c’’’ |   |
+|   |    | TT  | d’’   |   |    | TT  |        |   |    | TT  | d’’’ |   |
+| **Z** | BS | b/e | a’’’’ |   | BS | b/e | a’’’’’ |   | BS | b/e |      |   |
+|   |    | TT  | b’’’’ |   |    | TT  | b’’’’’ |   |    | TT  |      |   |
+|   | BB | b/e | c’’’’ |   | BB | b/e | c’’’’’ |   | BB | b/e |      |   |
+|   |    | TT  | d’’’’ |   |    | TT  | d’’’’’ |   |    | TT  |      |   |
+
+
 
 ### Ethnographic relevance
 
