Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -34,7 +34,8 @@
 |   | BB | b/e | c’’’’ |   | BB | b/e | c’’’’’ |   | BB | b/e |   -   |  - |
 |   |    | TT  | d’’’’ |   |    | TT  | d’’’’’ |   |    | TT  |   -   |  - |
 
-
+#### Notes:
+> * for obvious reasons, branches cannot send amounts to themselves. Therefore, these cells jave been filled with `-`.
 
 ### Ethnographic relevance
 
