Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -36,6 +36,8 @@
 
 #### Notes:
 > * for obvious reasons, branches cannot send amounts to themselves. Therefore, these cells jave been filled with `-`.
+> * as in the above table, amounts sent are expressed by means of generic letters, `a`, `b`, `c`, `d`, `a'`, `b'` etc.
+
 
 ### Ethnographic relevance
 
