Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -38,7 +38,7 @@
 > * for obvious reasons, branches cannot send amounts to themselves. Therefore, these cells jave been filled with `-`.
 > * as in the above table, amounts sent are expressed by means of generic letters, `a`, `b`, `c`, `d`, `a'`, `b'` etc.
 
-3. A methodological novelty of the book is with the introduction of a measure by means of which we express not only the relative exchange position of a branch vis-a-vis another one, but also vis-a-vis the whole branch network. We can achieve this by calculating the total amount of `bills sold` a branch sends on to all other branches (i.e. `SUM2`), and deduct that from the total amount of `bills bought` it send on to all other branches (`SUM1`). This can be done for all points in time t1, t2, t3, etc. Calculating the exchange position of branch X in a simple 3-branch network (X, Y, Z) at time t1 can be done as follows:
+3. A **methodological novelty** of the book is *the introduction of a measure by means of which we express not only the relative exchange position of a branch vis-a-vis another one, but also vis-a-vis the whole branch network*. We can achieve this by calculating the total amount of `bills sold` a branch sends on to all other branches (i.e. `SUM2`), and deduct that from the total amount of `bills bought` it send on to all other branches (`SUM1`). This can be done for all points in time t1, t2, t3, etc. Calculating the exchange position of branch X in a simple 3-branch network (X, Y, Z) at time t1 can be done as follows:
 
 |       | X                                    | Y                                     | Z                                     |                      |
 |-------|--------------------------------------|---------------------------------------|---------------------------------------|----------------------|
