Update 1. database architecture.md

--- a/1. database architecture.md
+++ b/1. database architecture.md
@@ -52,6 +52,14 @@
 |       | **SUM2:(Y→X)+(Z→X)**                 |                                       |                                       |                      |
 
 
+4. Having calculated the exchange position of *every* branch vis-a-vis the branch network at *all* points in time, we can proceed with a **time series**:
+
+|       | t1                  | t2  | t3  | ... |
+|-------|---------------------|-----|-----|-----|
+| **X** | (X→Y+X→Z)-(Y→X+Z→X) | ... | ... |     |
+| **Y** | (Y→X+Y→Z)-(X→Y+Z→Y) | ... | ... |     |
+| **Z** | (Z→X+Z→Y)-(X→Z+Y→Z) | ... | ... |     |
+
 
 ### Ethnographic relevance
 
