Update 4. tests done and results used or discarded.md

--- a/4. tests done and results used or discarded.md
+++ b/4. tests done and results used or discarded.md
@@ -1,6 +1,6 @@
 ## "Forensic Accounting"
 
-1. As indicated in the *Making of the Database*-chapter, an important key to the successful analysis of exchange banking lies with the discovery of what mattered to bankers at the time, more specifically what they perceived a) crucial to the bank's smooth functioning, b) acceptable in terms of risks to be taken, and so on. It would therefore be a mistake to make claims about turnover, profitability etc, without getting one's definitions straight. In one example, we have pointed out peculiarities pertaining to interest bills, or *ritsuki tegata* 利付手形. In another, Nishimura clarified the changing nature of bill finance after the late 1880s. Importantly, his argument was based on inductive reasoning, so can only be judged as probable, but the lack of available data made the use of descriptive evidence a necessary way to arrive at arguably the most plausible explanation of a host of counterintuitive trends.
+1. As indicated in the *Making of the Database*-chapter, an important key to the successful analysis of exchange banking lies with the discovery of what mattered to bankers at the time, more specifically what they perceived a) crucial to the bank's smooth functioning, b) acceptable in terms of risks to be taken, and so on. It would therefore be a mistake to make claims about turnover, profitability etc, without getting one's definitions straight. In one example, we have pointed out peculiarities pertaining to interest bills, or *ritsuki tegata* 利付手形. In another, Nishimura clarified the changing nature of bill finance after the late 1880s. Importantly, his argument was based on inductive reasoning, so can only be judged in terms of relative probability, but the lack of available data made the use of descriptive evidence a necessary way to arrive at arguably the most plausible explanation of a host of counterintuitive trends.
 
 > * Reference: Nishimura, Shizuya. 1971. *The Decline of Inland Bills of Exchange in the London Money Market, 1855-1913*. London: Cambridge University Press.
 
