Update 4. tests done and results used or discarded.md

--- a/4. tests done and results used or discarded.md
+++ b/4. tests done and results used or discarded.md
@@ -5,3 +5,6 @@
 > * Reference: Nishimura, Shizuya. 1971. *The Decline of Inland Bills of Exchange in the London Money Market, 1855-1913*. London: Cambridge University Press.
 
 2. Inductive, or, if one wants, 'forensic' reasoning has come to bear significantly on the calculations underlying our findings.  
+
+Image 1: 
+![bills workflow in an exchange bank](/trade_finance_model.png)
