Update 4. tests done and results used or discarded.md

--- a/4. tests done and results used or discarded.md
+++ b/4. tests done and results used or discarded.md
@@ -6,8 +6,8 @@
 
 2. Inductive, or, if one wants, 'forensic' reasoning has come to bear significantly on the calculations underlying our findings. As noted in the book:
 
-> ... how did nineteenth century exchange business work? [...] ? As we have seen, bank branches sent both ‘bills sold’ (to importers in their country of location) and ‘bills bought’ (from exporters in their country of location) to each other. Can we conveniently aggregate these amounts in order to calculate the relative exchange position of certain branches within our network? Although this is certainly tempting, and may even be legitimate depending on the research question, for instance in the case of measuring activity at branches, it is problematic in view of the accounting technicalities that were valid at the time. 
-> As noted by Ishii (still the most authoritative source on this matter), bills bought is the category signifying a positive transfer of funds, or better, the transfer of an asset, as branch X, after buying a bill from an exporter in the country of X, sends it on to branch Y, which books it as a ‘bill for collection’ (daikin toritate tegata 代金取立手形). At maturity, it collects the money as ‘adverse exchange’ (gyaku kawase 逆為替 or, alternatively, toritate kawase 取立為替) from an importer in the country in which Y is located, and books the bill to its asset side as a ‘bill collected’. In the case of export bills, money thus follows, or has the same direction of, the goods. In the case of bills sold, however, the direction of the transfer is reversed. Branch X sells foreign exchange to an importer of country X, so the latter can remit his payment to an exporter in country Y. The bill is booked to the credit of branch X.  Branch Y has to deal with the bill as a ‘bill payable’ (debit), as he will have to credit the account of the exporter in the country of Y. The latter operation implies a transfer of funds from branch Y to branch X, or, in other words, a ‘negative transfer’.
+> [...] how did nineteenth century exchange business work? [...] ? As we have seen, bank branches sent both ‘bills sold’ (to importers in their country of location) and ‘bills bought’ (from exporters in their country of location) to each other. Can we conveniently aggregate these amounts in order to calculate the relative exchange position of certain branches within our network? Although this is certainly tempting, and may even be legitimate depending on the research question, for instance in the case of measuring activity at branches, it is problematic in view of the accounting technicalities that were valid at the time. 
+> As noted by Ishii (still the most authoritative source on this matter), bills bought is the category signifying a positive transfer of funds, or better, the transfer of an asset, as branch X, after buying a bill from an exporter in the country of X, sends it on to branch Y, which books it as a ‘bill for collection’ (*daikin toritate tegata* 代金取立手形). At maturity, it collects the money as ‘adverse exchange’ (*gyaku kawase* 逆為替 or, alternatively, *toritate kawase* 取立為替) from an importer in the country in which Y is located, and books the bill to its asset side as a ‘bill collected’. In the case of export bills, money thus follows, or has the same direction of, the goods. In the case of bills sold, however, the direction of the transfer is reversed. Branch X sells foreign exchange to an importer of country X, so the latter can remit his payment to an exporter in country Y. The bill is booked to the credit of branch X.  Branch Y has to deal with the bill as a ‘bill payable’ (debit), as he will have to credit the account of the exporter in the country of Y. The latter operation implies a transfer of funds from branch Y to branch X, or, in other words, a ‘negative transfer’.
 
 >> * Source: Ishii Kanji 石井寛治. 1999. *Kindai nihon kin’yū-shi josetsu* 『近代日本金融史序説』. 東京大学出版会, esp. pp. 245 ff.
 
