Update 4. tests done and results used or discarded.md

--- a/4. tests done and results used or discarded.md
+++ b/4. tests done and results used or discarded.md
@@ -11,6 +11,8 @@
 
 >> * Source: Ishii Kanji 石井寛治. 1999. *Kindai nihon kin’yū-shi josetsu* 『近代日本金融史序説』. 東京大学出版会, esp. pp. 245 ff.
 
+3. In its most rudimentary form, the direction of the flow of funds with the indication of a positive versus negative fund flow (+/-) between two branches in different countries looks as follows:
+
 Image 1: 
 
 ![bills workflow in an exchange bank](/trade_finance_model.png)
