Update 4. tests done and results used or discarded.md

--- a/4. tests done and results used or discarded.md
+++ b/4. tests done and results used or discarded.md
@@ -16,3 +16,11 @@
 Image 1: 
 
 ![bills workflow in an exchange bank](/trade_finance_model.png)
+
+> * After: 鈴木俊夫. 2005. “オリエンタル銀行設立の一齣.” 三田商学研究 48 (5): 41–61. http://ci.nii.ac.jp/naid/120000800144. P. 50.
+Compare as well: Suzuki, Toshio. 2012. “The Rise and Decline of the Oriental Bank Corporation, 1842–84.” In *The Origins of International Banking in Asia*, edited by Shizuya Nishimura, Toshio Suzuki, and Ranald C. Michie, 86–106. Oxford University Press.
+http://www.oxfordscholarship.com/view/10.1093/acprof:oso/9780199646326.001.0001/acprof-9780199646326-chapter-4. P. 93
+> * Note: as the reader may realize, the inclusion of a remitter respectively remittee is strictly speaking not required.  Importers and exporters can deal directly with a branch of an international bank. We do include them, however, in order to allow for a situation in which these dealings were mediated by yet another institution. Historically, this was the case in India, where the Presidency Banks played the role of middlemen. In the metropolis, one may think of the role of clearing and merchant banks, whose ‘signing across’ (an expression of the promise to pay the bills at maturity) raised a bill’s creditworthiness, so the latter could easily be sold in the London discount market. Their ‘reputability’ was, in other words, integral to the smooth functioning of the mechanism of bill finance.
+See: Brunyate, James Bennett. 1900. *An Account of the Presidency Banks*. Office of the Superintendent of Government Print.
+Suzuki, Toshio. 2012. “The Rise and Decline of the Oriental Bank Corporation, 1842–84.” In *The Origins of International Banking in Asia*, edited by Shizuya Nishimura, Toshio Suzuki, and Ranald C. Michie, 86–106. Oxford University Press.
+http://www.oxfordscholarship.com/view/10.1093/acprof:oso/9780199646326.001.0001/acprof-9780199646326-chapter-4. P. 92.
